also run the command "openssl dhparam -out ..." after creating a new root CA

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# Copyright (C) 2023 Thomas Mueller (tm-dd)
+# Copyright (C) 2024 Thomas Mueller (tm-dd)
 #
 # This code is free software. You can use, redistribute and/or
 # modify it under the terms of the GNU General Public Licence
@@ -20,6 +20,7 @@ caFolder='/etc/acme_ca/'
 caClientExtFolder=${caFolder}'conf/'
 caClientCertFolder=${caFolder}'certs/'
 caClientKeysFolder=${caFolder}'keys/'
+caDHParFile=${caFolder}'dh.pem'
 caPrivateRand=${caFolder}'rand'
 caConfFile=${caFolder}'ca-conf.conf'
 caClientIndexFile="${caFolder}index.txt"
@@ -29,6 +30,7 @@ caClientIndexAttrFile=${caClientIndexFile}'.attr'
 caCrtFile=${caFolder}'acme_ca.crt'
 caKeyFile=${caFolder}'acme_ca.key'
 caValidDays=77777
+caDHNumberOfBits=4096
 
 # files and settings for the server
 caServerKeyFile=${caFolder}'vpn_server.key'
